@@ -1,3 +1,30 @@
 sourceSets.main.java.srcDirs = ["src/main/java/","mindustrySrc/","annotations/build/generated/sources/annotationProcessor/java/main"]
 sourceSets.main.resources.srcDirs = ["src/main/resources/"]
-
+//tasks.withType(JavaCompile){
+//    targetCompatibility = 8
+//    sourceCompatibility = JavaVersion.VERSION_16
+//    options.encoding = "UTF-8"
+//    options.compilerArgs += ["-Xlint:deprecation"]
+//    options.compilerArgs.addAll(['--release', '8'])
+//
+//    options.forkOptions.jvmArgs += [
+//            '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+//            '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+//            '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+//            '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+//            '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+//            '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+//            '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+//            '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
+//    ]
+//}
+mindustryModCore{
+    setupAnnotationProject()
+}
+dependencies{
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    compileOnly("org.jetbrains:annotations:24.0.1")
+    implementation 'org.reflections:reflections:0.10.2'
+//    annotationProcessor 'com.github.Anuken:jabel:0.9.0'
+}
